	  comes back online. (Dany)
	* Cleaned up muxevent_names array in event.c, was sorely
	  out of date.  Probably still needs more work.  This was
	  being used by the DEBUG object when listing events. (Dany)
	* AIs can now pick their own sensors using the
	  auto_sensor_event. (Dany)
	* Added command to AI's interface called 'EVENTSTATS', lists
	  the various events running on that AI. (Dany)

	- Bugfixes
	* Can no longer hide while OOD'ing (Greg Taylor)
	* Fixed btsetcharvalue() and btgetcharvalue() crashers.
	  (Martin Murray)
	* Some fixes for the mux to compile on Linux/amd64,
	  still a bunch of 32/64 bit issues. (Martin Murray)
	* Changed notify_check to notify_checked, was conflicting 
	  with a builtin function on Mac OS X. (Dany)
	* Fixes for embark and udisembark. (Dany)
	* Fixes to the configure system. (Dany)
	* btsetpartcost() corrected negative cost error check. (George Ponick)
	* btdamagemech() total damage limited to 1000 to prevent runaway loop. (George Ponick)
	* Fixed bttechlist() to prevent that FUSTAG bug. (Greg Taylor)
	* Fix for bug #1321731.  Masc code more in line with FASA
	  now and should destroy all the hips as well as
	  set the max speed to zero, fixing any weirdness
	  that was occuring when the unit took another leg crit. (Dany)
	* Fix for bug #1324084 - Stealth Armor.  Fix so when you
	  repair the armor on a stealth armor unit, it uses STH_Armor
	  parts instead of 'Internals' (which is wrong). (Dany)

btonline-btechmux 0.4:
	- Changes
	* Merged with the unstable branch's revision #38 + the patch
	  for @restart and the rbtree. Includes some updates to the 
	  event code including the need for libevent to be installed 
	  on the system. (Dany)
	* Changed btech_tl3_charge to default on. (Dany)
	* Added btech_use_tech_bsuit config parameter with default on.
	  When enabled it uses the Technician-BSuit skill for fixing
	  BattleSuits, if off uses Technician-Battlemech. (Dany)
	* Replaced the select() loop in bsd.c with Niels Provos' 